--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,7 @@
 use_frameworks!
 
 target 'SimpleCollapsingHeaderView_Example' do
-  pod 'SimpleCollapsingHeaderView', :path => '../'
+	# pod 'SimpleCollapsingHeaderView', :path => '../'
 
   target 'SimpleCollapsingHeaderView_Tests' do
     inherit! :search_paths
